added database lock, also in_progress state for jobs
